plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.2'
	id 'io.spring.dependency-management' version '1.1.4'
	id "org.sonarqube" version "5.1.0.4882"
	id 'checkstyle'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

jar {
	enabled = false
}

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}

	all { // log4j2와 중복으로 인해 logback 의존성 제거
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
	maven { url 'https://repo.spring.io/snapshot' }
}

sonar {
	properties {
		property "sonar.projectKey", "PICKO-BE"
		property "sonar.organization", "pick-o"
		property "sonar.host.url", "https://sonarcloud.io"
		property 'sonar.java.checkstyle.reportPaths', 'build/reports/checkstyle/main.xml'
	}
}

checkstyle {
	toolVersion = "10.18.2"
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.2.0'

	// security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// jwt
	implementation 'org.testng:testng:7.1.0'
	testImplementation 'junit:junit:4.13.1'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

	// emailAuth
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'

	// caffeine cache
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.github.ben-manes.caffeine:caffeine'

	// log4j2
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-web-services'
	testImplementation 'org.projectlombok:lombok:1.18.26'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// oauth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// jackson
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'

	// SpringAI
	implementation platform("org.springframework.ai:spring-ai-bom:1.0.0-SNAPSHOT")
	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter'

	// Retry
	implementation 'org.springframework.retry:spring-retry'

	// 오류 해결을 위한 임시 추가
	implementation 'io.micrometer:micrometer-tracing-bridge-otel'
}

tasks.named('test') {
	useJUnitPlatform()
}
